--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ Author URL: http://EMRAN_NASSER.com
 	<head>
 		<title>I am Emran Ghaleb Mohammed Nasser Welcome to my CV | Home </title>
 		<!-- jQuery (necessary JavaScript plugins) -->
-		<script src="js/jquery.min.js"></script>
+		<script src="JS/jquery.min.js"></script>
 		<!-- Custom Theme files -->
-		<link href="css/style.css" rel='stylesheet' type='text/css' />
+		<link href="CSS/style.css" rel='stylesheet' type='text/css' />
 		<!-- Custom Theme files -->
 		<link rel="icon"type="imge/png" href="Photos/emrano.png">
 		<!--//theme-style-->
